--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,390 @@
 */
 
 .page {
+  display: grid;
+  align-items: center;
+  justify-items: center;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  background-color: var(--background-color, #fff);
+  background-image: var(--background-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: var(--font-family-main);
+  color: var(--text-color);
+  font-variation-settings: "wght" var(--main-font-weight);
+  margin-bottom: 100px;
+  
+}
+
+.header {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  width: clamp(375px, 48.7%, 700px);
+  font-family: var(--font-family-accent);
+  background-color: var(--background-color, #fff);
+  border: var(--border);
+  padding-top: clamp(7.5rem, 6.346rem + 4.923vw, 8.5rem);
+  margin: 102px auto;
+
+  
+}
+
+.header__logo {
+  text-transform: uppercase;
+  font-size: clamp(3.063rem, 2.7104rem + 1.5023vw, 4.063rem);
+  margin-block-end: 20px;
+}
+
+.header__title {
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.438rem);
+  margin-top: -5px;
+}
+
+.theme-menu {
+  margin-block: 20px;
+  margin-inline-start: 15px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.theme-menu__item {
+
+}
+
+.theme-menu__button {
+  position: relative;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:disabled {
+  position: relative;
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  inset-inline-start: -20px;
+  animation: arrow 0.5s ease-in-out infinite alternate;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--text-color);
+  scale: 0;
+  transform-origin: left;
+  transition: scale 0.3s ease;
+}
+
+.theme-menu__button:hover:after {
+  outline: none;
+  scale: 1;
+}
+
+.main {
+  display: grid;
+  width: clamp(375px, 48.7%, 700px);
+  gap: 50px;
+  padding-bottom: 50px;
+}
+
+.card {
+  border: var(--border);
+  background-color: var(--background-color, #fff); 
+}
+
+.card__title {
+  font-variation-settings: "wght" var(--bold-font-weight);
+  font-size: 18px;
+  justify-self: left;
+  line-height: normal;
+  padding: 5px 10px;
+}
+
+.card__image-wrapper {
+  position: relative;
+}
+
+.card__image-watermark {
+  position: absolute;
+  z-index: 1;
+  text-transform: uppercase;
+  opacity: 0.5;
+  font-family: var(--font-family-accent);
+  font-size: 14px;
+  text-shadow: 0 1px var(--shadow-color), 
+  0 -1px var(--shadow-color),
+  1px 0 var(--shadow-color),
+  -1px 0 var(--shadow-color);
+  inset-block-start: 25px;
+  inset-inline-end: clamp(0.6875rem, -0.3221rem + 4.3077vw, 1.5625rem);
+}
+
+@supports (-webkit-text-stroke: 1px var(--shadow-color)) {
+  .card__image-watermark {
+    -webkit-text-stroke: 1px var(--shadow-color);
+    text-shadow: none;
+  }
+}
+
+.card__image {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  border-block: var(--border);
+  min-width: 371px;
+  min-height: 371px;
+}
+
+.card__content {
+  padding: 25px;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card__content-opinion {
+  margin-top: 27px;
+  font-size: 18px;
+}
+
+.card__button-section {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 25px 25px 0;
+  gap: 4px;
+}
+
+.card__like-button {
+  min-inline-size: 130px;
+  background-color: var(--background-color);
+  padding: 9px 17px;
+}
+
+.button {
+  position: relative;
+  cursor: pointer;
+  border: 2px solid currentColor;
+  background: var(--background-color, #fff);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  transition: box-shadow ease 0.3s;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--text-color);
+}
+
+.button:hover {
+  box-shadow: 2px 2px 0 0 var(--text-color);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--text-color);
+  scale: 0 1;
+  transform-origin: left;
+  transition: scale ease-in-out 0.5s;
+}
+
+.button:hover::before {
+  scale: 1;
+}
+
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  min-height: 38px;
+  transition: border-color 0.3s ease;
+}
+
+.like-icon {
+  width: 39px;
+  height: 36px;
+  padding-top: 5px;
+}
+
+.like-icon:hover {
+  cursor: pointer;
+}
+
+.button__text {
+  display: block;
+  position: relative;
+  z-index: 2;
+  font-family: var(--font-family-accent);
+  color: var(--button__text-color);
+  mix-blend-mode: difference;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.footer {
+  background-color: var(--background-color, #fff);
+  max-inline-size: 306px;
+}
+
+.footer__button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  background-color: transparent;
+  padding: 15px 18px 15px 18px;
+  gap: 8px;
+  border: var(--border);
+}
+
+.footer__button:focus {
+  outline: none;
+}
+
+.footer__icon {
+  inline-size: 28px;
+  block-size: 28px;
+  color: var(--icon-color);
+  mix-blend-mode: difference;
+}
+
+.dialog::backdrop {
+  opacity: 0.75;
+  background-color: var(--background-color-backdrop);
+}
+
+.dialog {
+  border: var(--border);
+  color: var(--text-color);
+  min-width: 341px;
+  min-inline-size: 341px;
+  max-inline-size: 357px;
+  background: var(--background-color);
+}
+
+.dialog__container {
+  display: flex;
+  flex-direction: column;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 20px;
+  padding: 30px;
+}
+
+.dialog__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-block-size: 63px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-family: var(--font-family-accent);
+  font-weight: var(--main-font-weight);
+}
+
+.dialog__icon {
+  align-self: center;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.dialog__button {
+  height: 38px;
+  width: 100%;
+  cursor: pointer;
+  background-color: var(--background-color);
+  text-transform: uppercase;
+  border: var(--border);
+  margin-bottom: 30px;
+}
+
+@media (width > 375px) {
+  .footer {
+    max-inline-size: 335px;
+  }
+
+  .footer__icon {
+    inline-size: 21px;
+    block-size: 21px;
+  }
+
+  .footer__button {
+    flex-direction: row;
+  }
+
+}
+
+/* фильтры */
+
+.filter__grayscale {
+  filter: grayscale(50%);
+}
+
+.filter__brightness {
+  filter: gbrightness(15%);
+}
+
+.filter__saturate {
+  filter: saturate(120%);
+}
+
+.filter__sepia {
+  filter: sepia(50%);
+}
+
+.filter__invert {
+  filter: invert(100%);
+}
+
+.filter__saturate-sepia {
+  filter: saturate(40%) sepia(70%);
+}
+
+.filter__hue-rotate {
+  filter: hue-rotate(300deg);
+}
+
+.filter__blur {
+  filter: blur(1px);
 }
