--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,7 +13,7 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
-@keyframes arrow {
+@keyframes arrowMoveLeftRightSlow {
     0% {
     inset-inline-start: -20px;
     }
@@ -31,7 +31,7 @@
     }
   }
   
-  @keyframes sparks {
+  @keyframes sparksHeart {
     from {
         fill: transparent;
       }
@@ -42,7 +42,7 @@
     }
 
   .core {
-    transition: fill 0.3s linear 0.03s;
+    transition: fill 0.1s linear
   }
   
   .main-body {
@@ -50,7 +50,7 @@
   }
   
   .contour {
-    transition: fill 0.3s linear 0.06s;
+    transition: fill 0.1s linear;
   }
   
   .like-icon:hover .core {
@@ -85,13 +85,14 @@
   
   .like-icon.is-liked .contour {
     fill: var(--heart-color);
+    transition: fill 0.3s 0.06s linear;
   }
   
   .like-icon.is-liked .heart {
     transform-origin: center center;
-    animation: scaleHeart 0.3s ease-in 0.1s 2 alternate;
+    animation: scaleHeart 0.3s ease-in 0.1s 1 alternate;
   }
   
   .like-icon.is-liked .sparks {
-    animation: sparks 0.3s ease-in 0.3s 2 alternate;
+    animation: sparksHeart 0.3s ease-in 0.3s 1 alternate;
   }
