--- a/styles/style.css
+++ b/styles/style.css
@@ -29,33 +29,29 @@
   color: var(--text-color);
   font-variation-settings: "wght" var(--main-font-weight);
   margin-bottom: 100px;
-  
 }
 
 .header {
   display: grid;
   align-items: center;
   justify-items: center;
-  width: clamp(375px, 48.7%, 700px);
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   font-family: var(--font-family-accent);
   background-color: var(--background-color, #fff);
   border: var(--border);
   padding-top: clamp(7.5rem, 6.346rem + 4.923vw, 8.5rem);
-  margin: 102px auto;
-
-  
+  margin: 100px auto;
 }
 
 .header__logo {
   text-transform: uppercase;
   font-size: clamp(3.063rem, 2.7104rem + 1.5023vw, 4.063rem);
-  margin-block-end: 20px;
 }
 
 .header__title {
   text-transform: uppercase;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.438rem);
-  margin-top: -5px;
+  margin-block-start: 10px;
 }
 
 .theme-menu {
@@ -69,10 +65,6 @@
   gap: 8px;
 }
 
-.theme-menu__item {
-
-}
-
 .theme-menu__button {
   position: relative;
   text-transform: uppercase;
@@ -84,15 +76,15 @@
 }
 
 .theme-menu__button:disabled {
-  position: relative;
   opacity: 0.6;
 }
 
 .theme-menu__button:disabled::before {
   content: "▶";
   position: absolute;
-  inset-inline-start: -20px;
-  animation: arrow 0.5s ease-in-out infinite alternate;
+  top: 0px;
+  left: -20px;
+  animation: arrowMoveLeftRightSlow 0.5s ease-in-out infinite alternate;
 }
 
 .theme-menu__button:hover {
@@ -105,14 +97,12 @@
 }
 
 .theme-menu__button:focus-visible {
-  outline: none;
   opacity: 0.6;
 }
 
 .theme-menu__button::after {
   content: "";
   display: block;
-  position: absolute;
   bottom: -3px;
   left: 0;
   width: 100%;
@@ -123,8 +113,7 @@
   transition: scale 0.3s ease;
 }
 
-.theme-menu__button:hover:after {
-  outline: none;
+.theme-menu__button:focus-visible::after {
   scale: 1;
 }
 
@@ -132,20 +121,18 @@
   display: grid;
   width: clamp(375px, 48.7%, 700px);
   gap: 50px;
-  padding-bottom: 50px;
 }
 
 .card {
   border: var(--border);
-  background-color: var(--background-color, #fff); 
+  background-color: var(--background-color, #fff);
 }
 
 .card__title {
   font-variation-settings: "wght" var(--bold-font-weight);
   font-size: 18px;
-  justify-self: left;
   line-height: normal;
-  padding: 5px 10px;
+  padding: 4px 10px;
 }
 
 .card__image-wrapper {
@@ -159,10 +146,8 @@
   opacity: 0.5;
   font-family: var(--font-family-accent);
   font-size: 14px;
-  text-shadow: 0 1px var(--shadow-color), 
-  0 -1px var(--shadow-color),
-  1px 0 var(--shadow-color),
-  -1px 0 var(--shadow-color);
+  text-shadow: 0 1px var(--shadow-color), 0 -1px var(--shadow-color),
+    1px 0 var(--shadow-color), -1px 0 var(--shadow-color);
   inset-block-start: 25px;
   inset-inline-end: clamp(0.6875rem, -0.3221rem + 4.3077vw, 1.5625rem);
 }
@@ -178,34 +163,33 @@
   display: block;
   object-fit: cover;
   object-position: center;
-  inline-size: 100%;
   border-block: var(--border);
-  min-width: 371px;
-  min-height: 371px;
+  min-width: 375px;
+  min-height: 375px;
+  inline-size: 100%;
+  aspect-ratio: 1/1;
 }
 
 .card__content {
-  padding: 25px;
+  display: grid;
+  align-items: center;
+  padding: 29px 25px 5px 25px;
   font-size: 18px;
   line-height: 21px;
-}
-
-.card__content-opinion {
-  margin-top: 27px;
-  font-size: 18px;
+  gap: 27px;
 }
 
 .card__button-section {
   display: flex;
   justify-content: flex-end;
-  padding: 0 25px 25px 0;
-  gap: 4px;
+  padding: 20px 25px 20px 25px;
+  gap: 2px;
+  cursor: pointer;
 }
 
 .card__like-button {
   min-inline-size: 130px;
-  background-color: var(--background-color);
-  padding: 9px 17px;
+  max-block-size: 38px;
 }
 
 .button {
@@ -223,10 +207,6 @@
 }
 
 .button:focus-visible {
-  box-shadow: 2px 2px 0 0 var(--text-color);
-}
-
-.button:hover {
   box-shadow: 2px 2px 0 0 var(--text-color);
 }
 
@@ -255,14 +235,18 @@
   transition: border-color 0.3s ease;
 }
 
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: var(--border);
+}
+
 .like-icon {
   width: 39px;
   height: 36px;
-  padding-top: 5px;
-}
-
-.like-icon:hover {
-  cursor: pointer;
+  padding-top: 3px;
 }
 
 .button__text {
@@ -276,24 +260,19 @@
   font-size: 14px;
 }
 
-.footer {
-  background-color: var(--background-color, #fff);
-  max-inline-size: 306px;
+.section__save_button {
+  display: flex;
+  justify-content: center;
+  margin-top: 2px;
 }
 
 .footer__button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
-  background-color: transparent;
   padding: 15px 18px 15px 18px;
   gap: 8px;
-  border: var(--border);
-}
-
-.footer__button:focus {
-  outline: none;
+  max-inline-size: 306px;
 }
 
 .footer__icon {
@@ -315,6 +294,7 @@
   min-inline-size: 341px;
   max-inline-size: 357px;
   background: var(--background-color);
+  padding: 30px 42px 30px 42px;
 }
 
 .dialog__container {
@@ -323,16 +303,15 @@
   display: grid;
   grid-template-columns: min-content 1fr;
   gap: 20px;
-  padding: 30px;
 }
 
 .dialog__title {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-block-size: 63px;
   text-transform: uppercase;
   font-size: 14px;
+  line-height: 21px;
   font-family: var(--font-family-accent);
   font-weight: var(--main-font-weight);
 }
@@ -344,18 +323,15 @@
 }
 
 .dialog__button {
-  height: 38px;
+  min-height: 38px;
   width: 100%;
-  cursor: pointer;
-  background-color: var(--background-color);
   text-transform: uppercase;
-  border: var(--border);
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 @media (width > 375px) {
-  .footer {
-    max-inline-size: 335px;
+  .header__title {
+    margin-block-start: 20px;
   }
 
   .footer__icon {
@@ -365,8 +341,8 @@
 
   .footer__button {
     flex-direction: row;
+    max-inline-size: 335px;
   }
-
 }
 
 /* фильтры */
@@ -376,7 +352,7 @@
 }
 
 .filter__brightness {
-  filter: gbrightness(15%);
+  filter: brightness(85%);
 }
 
 .filter__saturate {
