--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,8 +5,53 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 :root.theme-light {
-    --font-family-main: 'Inter-Variable', sans-serif;
-    --font-family-accent: 'PressStart2P';
+  --font-family-main: "Inter-Variable", sans-serif;
+  --font-family-accent: "PressStart2P";
+  --main-font-weight: 400;
+  --bold-font-weight: 700;
+  --background-color: #fff;
+  --background-color-backdrop: var(--text-color);
+  --shadow-color: var(--background-color);
+  --text-color: #000;
+  --icon-color: var(--background-color);
+  --button__text-color: var(--background-color);
+  --heart-color: #f00;
+  --background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --border: 2px solid var(--text-color);
+}
+
+:root.theme-dark {
+  --font-family-main: "Inter-Variable", sans-serif;
+  --font-family-accent: "PressStart2P";
+  --main-font-weight: 465;
+  --bold-font-weight: 785;
+  --background-color: #000;
+  --icon-color: var(--text-color);
+  --background-color-backdrop: var(--background-color);
+  --button__text-color: var(--text-color);
+  --shadow-color: var(--background-color);
+  --text-color: #00cc14;
+
+  --background-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306);
+  --border: 2px solid var(--text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-family-main: "Inter-Variable", sans-serif;
+    --font-family-accent: "PressStart2P";
     --main-font-weight: 400;
     --bold-font-weight: 700;
     --background-color: #fff;
@@ -14,33 +59,15 @@
     --shadow-color: var(--background-color);
     --text-color: #000;
     --icon-color: var(--background-color);
-    --heart-color: #f00;
     --button__text-color: var(--background-color);
-    --background-image: 
-      repeating-linear-gradient(to right,#d3d3d3 0 2px, transparent 2px 4px),
+    --heart-color: #f00;
+    --background-image: repeating-linear-gradient(
+        to right,
+        #d3d3d3 0 2px,
+        transparent 2px 4px
+      ),
       repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
       linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
     --border: 2px solid var(--text-color);
-  
-}
-
-:root.theme-dark {
-    --font-family-main: 'Inter-Variable', sans-serif;
-    --font-family-accent: 'PressStart2P';
-    --main-font-weight: 465;
-    --bold-font-weight: 785;
-    --background-color: #000;
-    --icon-color: var(--text-color);
-    --background-color-backdrop: var(--background-color);
-    --heart-color: var(--text-color);
-    --button__text-color: var(--text-color);
-    --shadow-color: var(--background-color);
-    --text-color: #00CC14;
-
-    --background-image: 
-      repeating-linear-gradient(to right,#000 0 2px, transparent 2px 4px),
-      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
-      linear-gradient(to bottom, #007f0c 0.01%, #004306);
-    --border: 2px solid var(--text-color);
-  
+  }
 }
