--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,21 +1,22 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-    --font-family-main: 'Inter-Variable', sans-serif;
-    --font-family-accent: 'PressStart2P';
-    --main-font-weight: 400;
-    --bold-font-weight: 700;
-    --background-color: #fff;
-    --background-color-backdrop: var(--text-color);
-    --shadow-color: var(--background-color);
-    --text-color: #000;
-    --icon-color: var(--background-color);
-    --icon-color: var(--background-color);
-    --button__text-color: var(--background-color);
-    --heart-color: #f00;
-    --background-image: 
-      repeating-linear-gradient(to right,#d3d3d3 0 2px, transparent 2px 4px),
-      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
-    --border: 2px solid var(--text-color);
-  
+  --font-family-main: "Inter-Variable", sans-serif;
+  --font-family-accent: "PressStart2P";
+  --main-font-weight: 400;
+  --bold-font-weight: 700;
+  --background-color: #fff;
+  --background-color-backdrop: var(--text-color);
+  --shadow-color: var(--background-color);
+  --text-color: #000;
+  --icon-color: var(--background-color);
+  --button__text-color: var(--background-color);
+  --heart-color: #f00;
+  --background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --border: 2px solid var(--text-color);
 }
