--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,9 @@
 */
 
 .page {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-items: center;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   background-color: var(--background-color, #fff);
@@ -28,19 +28,20 @@
   font-family: var(--font-family-main);
   color: var(--text-color);
   font-variation-settings: "wght" var(--main-font-weight);
-  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .header {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-items: center;
-  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   font-family: var(--font-family-accent);
   background-color: var(--background-color, #fff);
   border: var(--border);
-  padding-top: clamp(7.5rem, 6.346rem + 4.923vw, 8.5rem);
-  margin: 100px auto;
+  padding-top: clamp(112px, 9.45vw, 136px);
+  padding-bottom: 20px;
+  width: clamp(375px, 48.7%, 700px);
 }
 
 .header__logo {
@@ -51,18 +52,15 @@
 .header__title {
   text-transform: uppercase;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.438rem);
-  margin-block-start: 10px;
-}
-
-.theme-menu {
-  margin-block: 20px;
-  margin-inline-start: 15px;
+  padding-bottom: 20px;
+  padding-top: 18px;
 }
 
 .theme-menu__list {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 6px;
+  padding-left: 18px;
 }
 
 .theme-menu__button {
@@ -121,6 +119,7 @@
   display: grid;
   width: clamp(375px, 48.7%, 700px);
   gap: 50px;
+  margin-top: 100px;
 }
 
 .card {
@@ -141,6 +140,8 @@
 
 .card__image-watermark {
   position: absolute;
+  top: clamp(1.5625rem, 1.4183rem + 0.6154vw, 1.6875rem);
+  right: clamp(0.6875rem, -0.3221rem + 4.3077vw, 1.5625rem);
   z-index: 1;
   text-transform: uppercase;
   opacity: 0.5;
@@ -148,8 +149,6 @@
   font-size: 14px;
   text-shadow: 0 1px var(--shadow-color), 0 -1px var(--shadow-color),
     1px 0 var(--shadow-color), -1px 0 var(--shadow-color);
-  inset-block-start: 25px;
-  inset-inline-end: clamp(0.6875rem, -0.3221rem + 4.3077vw, 1.5625rem);
 }
 
 @supports (-webkit-text-stroke: 1px var(--shadow-color)) {
@@ -164,8 +163,6 @@
   object-fit: cover;
   object-position: center;
   border-block: var(--border);
-  min-width: 375px;
-  min-height: 375px;
   inline-size: 100%;
   aspect-ratio: 1/1;
 }
@@ -231,7 +228,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  min-height: 38px;
+  max-block-size: 38px;
   transition: border-color 0.3s ease;
 }
 
@@ -241,12 +238,6 @@
 
 .card__icon-button:focus-visible {
   border: var(--border);
-}
-
-.like-icon {
-  width: 39px;
-  height: 36px;
-  padding-top: 3px;
 }
 
 .button__text {
@@ -268,16 +259,16 @@
 
 .footer__button {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   padding: 15px 18px 15px 18px;
   gap: 8px;
-  max-inline-size: 306px;
+  max-inline-size: 335px;
 }
 
 .footer__icon {
-  inline-size: 28px;
-  block-size: 28px;
+  inline-size: 21px;
+  block-size: 21px;
   color: var(--icon-color);
   mix-blend-mode: difference;
 }
@@ -329,19 +320,15 @@
   margin-top: 30px;
 }
 
-@media (width > 375px) {
-  .header__title {
-    margin-block-start: 20px;
-  }
-
+@media (width < 376px) {
   .footer__icon {
-    inline-size: 21px;
-    block-size: 21px;
+    inline-size: 28px;
+    block-size: 28px;
   }
 
   .footer__button {
-    flex-direction: row;
-    max-inline-size: 335px;
+    flex-direction: column;
+    max-inline-size: 306px;
   }
 }
 
