--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,7 @@
   font-family: var(--font-family-main);
   color: var(--text-color);
   font-variation-settings: "wght" var(--main-font-weight);
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-block: 100px;
 }
 
 .header {
@@ -38,28 +37,29 @@
   align-items: center;
   font-family: var(--font-family-accent);
   background-color: var(--background-color, #fff);
-  border: var(--border);
-  padding-top: clamp(112px, 9.45vw, 136px);
-  padding-bottom: 20px;
+  padding-top: clamp(120px, 9.45vw, 136px);
+  padding-block-end: 25px;
   width: clamp(375px, 48.7%, 700px);
+  border: var(--border);
 }
 
 .header__logo {
   text-transform: uppercase;
   font-size: clamp(3.063rem, 2.7104rem + 1.5023vw, 4.063rem);
+  margin-block-end: 20px;
 }
 
 .header__title {
   text-transform: uppercase;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.438rem);
-  padding-bottom: 20px;
-  padding-top: 18px;
+  margin-block-end: 25px;
+  font-weight: var(--main-font-weight);
 }
 
 .theme-menu__list {
   display: flex;
   flex-direction: column;
-  gap: 6px;
+  gap: 14px;
   padding-left: 18px;
 }
 
@@ -192,10 +192,10 @@
 .button {
   position: relative;
   cursor: pointer;
-  border: 2px solid currentColor;
   background: var(--background-color, #fff);
   font-family: var(--accent-font);
   font-size: 14px;
+  border: 2px solid currentColor;
   transition: box-shadow ease 0.3s;
 }
 
@@ -225,10 +225,12 @@
 }
 
 .card__icon-button {
-  border: none;
+  display: flex;
+  align-items: center;
   background-color: transparent;
   cursor: pointer;
   max-block-size: 38px;
+  border: 2px solid transparent;
   transition: border-color 0.3s ease;
 }
 
